Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/boxing/T5082929.out
T5082929.java:11:23: compiler.err.incomparable.types: java.lang.Float, java.lang.Integer
1 error
